<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/splash_logo"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@drawable/logotaskly"
        android:contentDescription="@string/cd_logo_taskflow"
        android:alpha="0.0"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/splash_app_name"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginBottom="12dp" />

    <TextView
        android:id="@+id/splash_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:alpha="0.0"
        app:layout_constraintTop_toBottomOf="@id/splash_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/splash_slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splash_slogan"
        android:textSize="14sp"
        android:textColor="@color/dark_gray"
        android:alpha="0.0"
        app:layout_constraintTop_toBottomOf="@id/splash_app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
